# snipeit-mcp

./: .env.example  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.py
prompts/: 01-asset-lookup-methods.md  02-import-management.md  03-relationship-endpoints.md  04-checkout-requests.md  05-user-relationships.md  06-audit-tracking.md  07-settings-system.md  08-model-files.md  09-field-ordering.md  README.md
src/snipeit_mcp/: client.py  schemas.py
src/snipeit_mcp/tools/: assets.py  custom_fields.py  foundational.py  imports.py  inventory.py  licenses.py  people.py  reports.py  system.py
tests/: __init__.py  conftest.py  test_admin.py  test_assets.py  test_configuration.py  test_core.py  test_custom_fields.py  test_error_handling.py  test_file_transfers.py  test_inventory.py  test_licensing.py  test_models.py  test_server.py  test_users_org.py
