[project]
name = "snipeit-mcp"
version = "0.3.0"
description = "MCP server for Snipe-IT inventory management system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "snipeit", "inventory", "asset-management", "ai"]
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "snipeit-api @ git+https://github.com/lfctech/snipeit-python-api@main",
]

[project.urls]
Homepage = "https://github.com/jameshgordy/snipeit-mcp"
Repository = "https://github.com/jameshgordy/snipeit-mcp"
Issues = "https://github.com/jameshgordy/snipeit-mcp/issues"

[tool.uv]
package = false
